fix popover spacing

--- a/src/scss/_blocks.scss
+++ b/src/scss/_blocks.scss
@@ -254,12 +254,12 @@ button[popovertarget="theme-switcher"] {
   position: absolute;
   top: 16px;
   right: 16px;
+  cursor: pointer;
   background: none;
   border: 0;
   padding: 0;
-
   img {
-    width: var(--space-m-l);
+    width: 40px;
   }
 }
 
@@ -269,13 +269,16 @@ button[popovertarget="theme-switcher"] {
   }
   margin: 0;
   border: 0;
+  border-radius: 8px;
   inset: unset;
   position: absolute;
-  top: var(--space-l-xl);
+  top: 60px;
   right: 16px;
+  overflow: hidden;
   flex-direction: column;
+  padding-inline: 2px;
   align-items: center;
-  background: none;
+  background: var(--content-bg);
   input {
     opacity: 0;
     position: absolute;
@@ -647,4 +650,15 @@ button.nav-link {
 
 .webrings {
   margin-block-start: var(--space-xs-s);
+}
+@keyframes pulse {
+  0% {
+    width: 40px;
+  }
+  50% {
+    width: 45px;
+  }
+  100% {
+    width: 40px;
+  }
 }
